update docs for maxstreamsperproto

--- a/maxstreamsperproto/libp2p/multistream.html
+++ b/maxstreamsperproto/libp2p/multistream.html
@@ -217,8 +217,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <li><a class="reference" href="#MultistreamSelect"
     title="MultistreamSelect = ref object of RootObj
   handlers*: seq[HandlerHolder]
-  codec*: string
-  openedStreams: Table[PeerId, CountTable[LPProtocol]]">MultistreamSelect</a></li>
+  codec*: string">MultistreamSelect</a></li>
 
   </ul>
 </li>
@@ -362,7 +361,6 @@ class="link-seesrc" target="_blank">Source</a>
 <dt><pre><a href="multistream.html#MultistreamSelect"><span class="Identifier">MultistreamSelect</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">RootObj</span>
   <span class="Identifier">handlers</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multistream.html#HandlerHolder"><span class="Identifier">HandlerHolder</span></a><span class="Other">]</span>
   <span class="Identifier">codec</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
-  <span class="Identifier">openedStreams</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <span class="Identifier">CountTable</span><span class="Other">[</span><a href="protocols/protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a><span class="Other">]</span><span class="Other">]</span>
 </pre></dt>
 <dd>
 
@@ -451,9 +449,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 helper to allow registering pure handlers
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L223"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L204"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L223" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L204" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -464,9 +462,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L217"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L198"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L217" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L198" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -477,9 +475,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L208"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L189"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L208" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L189" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -491,9 +489,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L133"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L131"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L133" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L131" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -504,9 +502,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 list remote protos requests on connection
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L118"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L116"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L118" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L116" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -516,9 +514,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L46"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L45"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L46" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L45" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -529,9 +527,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L114"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L112"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L114" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L112" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -543,9 +541,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L61"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L59"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L61" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L59" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -556,9 +554,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L108"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L106"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L108" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L106" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -569,9 +567,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L237"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L218"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L237" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L218" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -582,9 +580,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L240"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/multistream.nim#L221"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L240" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/multistream.nim#L221" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -598,7 +596,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 13:02:53 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 15:26:13 UTC</small>
       </div>
     </div>
   </div>
