--- a/maxstreamsperproto/libp2p/protocols/protocol.html
+++ b/maxstreamsperproto/libp2p/protocols/protocol.html
@@ -210,8 +210,7 @@ window.addEventListener("DOMContentLoaded", main2);
   codecs*: seq[string]
   handler*: LPProtoHandler   ## this handler gets invoked by the protocol negotiator
   started*: bool
-  maxIncomingStreams*: Opt[int]
-  openedStreams*: CountTable[PeerId]">LPProtocol</a></li>
+  maxIncomingStreams*: Opt[int]">LPProtocol</a></li>
   <li><a class="reference" href="#LPProtoHandler"
     title="LPProtoHandler = proc (conn: Connection; proto: string): Future[void] {.gcsafe,
     raises: [Defect].}">LPProtoHandler</a></li>
@@ -237,13 +236,6 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple nested-toc-section">codec=
       <li><a class="reference" href="#codec%3D%2CLPProtocol%2Cstring"
     title="codec=(p: LPProtocol; codec: string)">codec=(p: LPProtocol; codec: string)</a></li>
-
-  </ul>
-  <ul class="simple nested-toc-section">handleIncoming
-      <li><a class="reference" href="#handleIncoming%2CLPProtocol%2CConnection%2Cstring"
-    title="handleIncoming(protocol: LPProtocol; conn: Connection; proto: string): Future[
-    void]">handleIncoming(protocol: LPProtocol; conn: Connection; proto: string): Future[
-    void]</a></li>
 
   </ul>
 
@@ -297,15 +289,14 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">handler</span><span class="Operator">*</span><span class="Other">:</span> <a href="protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>   <span class="Comment">## this handler gets invoked by the protocol negotiator</span>
   <span class="Identifier">started</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">maxIncomingStreams</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">Opt</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span>
-  <span class="Identifier">openedStreams</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">CountTable</span><span class="Other">[</span><a href="../peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span>
 </pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L32"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L28"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L32" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L28" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -316,9 +307,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L26"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L22"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L26" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L22" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -333,9 +324,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L23"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L19"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L23" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L19" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -350,9 +341,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L53"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L38"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L53" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L38" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -362,23 +353,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L57"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L42"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L57" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-</div>
-<div id="handleIncoming,LPProtocol,Connection,string" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#handleIncoming%2CLPProtocol%2CConnection%2Cstring"><span class="Identifier">handleIncoming</span></a><span class="Other">(</span><span class="Identifier">protocol</span><span class="Other">:</span> <a href="protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a><span class="Other">;</span> <span class="Identifier">conn</span><span class="Other">:</span> <a href="../stream/connection.html#Connection"><span class="Identifier">Connection</span></a><span class="Other">;</span> <span class="Identifier">proto</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
-    <span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-            <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
-<dd>
-
-
-&nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L43"
-class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L43" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L42" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -393,9 +370,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L39"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L34"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L39" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L34" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -406,9 +383,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L40"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L35"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L35" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -419,9 +396,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L41"
+href="https://github.com/status-im/nim-libp2p/tree/maxstreamsperproto/libp2p/protocols/protocol.nim#L36"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L41" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/protocol.nim#L36" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -435,7 +412,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 15:26:13 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 15:51:18 UTC</small>
       </div>
     </div>
   </div>
