--- a/y/libp2p/muxers/yamux/yamux.html
+++ b/y/libp2p/muxers/yamux/yamux.html
@@ -288,9 +288,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="newStream(m: Yamux; name: string = &quot;&quot;; lazy: bool = false): Future[Connection]">newStream(m: Yamux; name: string = &quot;&quot;; lazy: bool = false): Future[Connection]</a></li>
 
   </ul>
-  <ul class="simple nested-toc-section">readOnce
-      <li><a class="reference" href="#readOnce.e%2CYamuxChannel%2Cpointer%2Cint"
-    title="readOnce(channel: YamuxChannel; pbytes: pointer; nbytes: int): Future[int]">readOnce(channel: YamuxChannel; pbytes: pointer; nbytes: int): Future[int]</a></li>
+  <ul class="simple nested-toc-section">readOnceX
+      <li><a class="reference" href="#readOnceX.e%2CYamuxChannel%2Cpointer%2Cint%2Ctuple%5Bstring%2Cint%2Cint%5D"
+    title="readOnceX(channel: YamuxChannel; pbytes: pointer; nbytes: int;
+          info: tuple[filename: string, line: int, column: int]): Future[int]">readOnceX(channel: YamuxChannel; pbytes: pointer; nbytes: int;
+          info: tuple[filename: string, line: int, column: int]): Future[int]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">write
@@ -340,9 +342,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L345"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L347"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L345" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L347" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -415,9 +417,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L505"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L507"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L505" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L507" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -428,9 +430,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L337"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L339"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L337" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L339" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -441,9 +443,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L265"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L267"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L265" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L267" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -473,9 +475,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L392"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L394"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L392" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L394" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -487,9 +489,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L417"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L419"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L417" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L419" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -501,22 +503,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L495"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L497"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L495" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L497" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="readOnce.e,YamuxChannel,pointer,int" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#readOnce.e%2CYamuxChannel%2Cpointer%2Cint"><span class="Identifier">readOnce</span></a><span class="Other">(</span><span class="Identifier">channel</span><span class="Other">:</span> <a href="yamux.html#YamuxChannel"><span class="Identifier">YamuxChannel</span></a><span class="Other">;</span> <span class="Identifier">pbytes</span><span class="Other">:</span> <span class="Identifier">pointer</span><span class="Other">;</span> <span class="Identifier">nbytes</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span> {.
-    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="readOnceX.e,YamuxChannel,pointer,int,tuple[string,int,int]" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#readOnceX.e%2CYamuxChannel%2Cpointer%2Cint%2Ctuple%5Bstring%2Cint%2Cint%5D"><span class="Identifier">readOnceX</span></a><span class="Other">(</span><span class="Identifier">channel</span><span class="Other">:</span> <a href="yamux.html#YamuxChannel"><span class="Identifier">YamuxChannel</span></a><span class="Other">;</span> <span class="Identifier">pbytes</span><span class="Other">:</span> <span class="Identifier">pointer</span><span class="Other">;</span> <span class="Identifier">nbytes</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span>
+                 <span class="Identifier">info</span><span class="Other">:</span> <span class="Keyword">tuple</span><span class="Other">[</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">line</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">,</span> <span class="Identifier">column</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <span class="Identifier">int</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L236"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L237"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L236" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L237" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -527,9 +530,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L324"
+href="https://github.com/status-im/nim-libp2p/tree/y/libp2p/muxers/yamux/yamux.nim#L326"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L324" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L326" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -548,7 +551,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 13:59:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-11-30 16:26:24 UTC</small>
       </div>
     </div>
   </div>
